# lnn-tosu-lyrics

./: README.md  app.py  index.html  player.html  pyproject.toml  utils.js
lib/: README.md
